--- a/_publications/2021-1-adv.md
+++ b/_publications/2021-1-adv.md
@@ -5,8 +5,8 @@ permalink: /publication/2021-1-adv
 # note: 'To appear'
 # acceptance: 'Acceptance rate: 1349/9020 (15.0%)'
 # rankGGS: 'GGS 2021: A++'
-date: 2017-01-01
-venue: 'Journal of High Energy Physics (JHEP)'
+date: 2021-01-01
+venue: 'Reviews in Physics'
 pubtype: 'journals'
 authors: ' 
 Anna Stakia
