--- a/_publications/2018-1-axino2.md
+++ b/_publications/2018-1-axino2.md
@@ -1,5 +1,5 @@
 ---
-title: "Light axinos from freeze-in: production processes, phase space distributions, and Ly-$\alpha$ forest constraints"
+title: "Light axinos from freeze-in: production processes, phase space distributions, and Ly-α forest constraints"
 collection: publ_journals
 permalink: /publication/2018-1-axino2
 # note: 'To appear'
