--- a/_posts/2022-07-26-blog-post-9.md
+++ b/_posts/2022-07-26-blog-post-9.md
@@ -1,5 +1,5 @@
 ---
-title: 'ICML 2022 papers'
+title: 'ICML 2022 privacy papers'
 date: 2022-07-26
 permalink: /posts/2022/07/icml2022/
 tags:
@@ -28,17 +28,16 @@ I have curated and am beginning to read ICML '22 papers related to privacy and f
 |Private optimization in the interpolation regime: faster rates and hardness results||
 |Private Adaptive Optimization with Side information||
 |The Fundamental Price of Secure Aggregation in Differentially Private Federated Learning||
-|Faster Privacy Accounting via Evolving Discretization||
+|Faster Privacy Accounting via Evolving Discretization|Improved [numerical accountant](https://arxiv.org/abs/2106.02848)|
 |The Poisson Binomial Mechanism for Unbiased Federated Learning with Secure Aggregation||
 |Private frequency estimation via projective geometry||
 |Deduplicating Training Data Mitigates Privacy Risks in Language Models||
-|Hermite Polynomial Features for Private Data Generation||
+|Hermite Polynomial Features for Private Data Generation|Use hermite polynomial instead of random fourier feature (RFF) for private generative modeling|
 |Understanding Clipping for Federated Learning: Convergence and Client-Level Differential Privacy||
 |Differentially Private Community Detection for Stochastic Block Models||
 |Improved Regret for Differentially Private Exploration in Linear MDP||
-|Selective Network Linearization for Efficient Private Inference||
 |Differentially Private Maximal Information Coefficients||
+|Privacy for Free: How does Dataset Condensation Help Privacy?|see [this thread](https://twitter.com/vitalyFM/status/1549599469695512576?cxt=HHwWgMCt9b2gpIErAAAA)|
 |Improved Rates for Differentially Private Stochastic Convex Optimization with Heavy-Tailed Data||
 |Tight and Robust Private Mean Estimation with Few Users||
 |Personalization Improves Privacy-Accuracy Tradeoffs in Federated Learning||
-|Privacy for Free: How does Dataset Condensation Help Privacy?|see [this thread](https://twitter.com/vitalyFM/status/1549599469695512576?cxt=HHwWgMCt9b2gpIErAAAA)|
