--- a/_posts/2022-07-26-blog-post-9.md
+++ b/_posts/2022-07-26-blog-post-9.md
@@ -12,32 +12,32 @@ I have curated and am beginning to read ICML '22 papers related to privacy and f
 |*Title*  |*Summary*  |
 |---|---|
 |[FedNew: A Communication-Efficient and Privacy-Preserving Newton-Type Method for Federated Learning](https://arxiv.org/abs/2206.08829)||
-|Differentially Private Approximate Quantiles||
-|A Joint Exponential Mechanism For Differentially Private Top-k||
-|Transfer Learning In Differential Privacy's Hybrid-Model||
-|Bounding Training Data Reconstruction in Private (Deep) Learning||
-|FriendlyCore: Practical Differentially Private Aggregation||
-|Public Data-Assisted Mirror Descent for Private Model Training||
-|Robin Hood and Matthew Effects: Differential Privacy Has Disparate Impact on Synthetic Data||
-|Selective Network Linearization for Efficient Private Inference||
-|Shuffle Private Linear Contextual Bandits||
-|Optimal Algorithms for Mean Estimation under Local Differential Privacy||
-|Task-aware Privacy Preservation for Multi-dimensional Data||
-|Differentially Private Coordinate Descent for Composite Empirical Risk Minimization||
-|Private Streaming SCO in l_p geometry with Applications in High Dimensional Online Decision Making||
-|Private optimization in the interpolation regime: faster rates and hardness results||
-|Private Adaptive Optimization with Side information||
-|The Fundamental Price of Secure Aggregation in Differentially Private Federated Learning||
-|Faster Privacy Accounting via Evolving Discretization|Improved [numerical accountant](https://arxiv.org/abs/2106.02848)|
-|The Poisson Binomial Mechanism for Unbiased Federated Learning with Secure Aggregation||
-|Private frequency estimation via projective geometry||
-|Deduplicating Training Data Mitigates Privacy Risks in Language Models||
-|Hermite Polynomial Features for Private Data Generation|Use hermite polynomial instead of random fourier feature (RFF) for private generative modeling|
-|Understanding Clipping for Federated Learning: Convergence and Client-Level Differential Privacy||
-|Differentially Private Community Detection for Stochastic Block Models||
-|Improved Regret for Differentially Private Exploration in Linear MDP||
-|Differentially Private Maximal Information Coefficients||
-|Privacy for Free: How does Dataset Condensation Help Privacy?|see [this thread](https://twitter.com/vitalyFM/status/1549599469695512576?cxt=HHwWgMCt9b2gpIErAAAA)|
-|Improved Rates for Differentially Private Stochastic Convex Optimization with Heavy-Tailed Data||
-|Tight and Robust Private Mean Estimation with Few Users||
-|Personalization Improves Privacy-Accuracy Tradeoffs in Federated Learning||
+|[Differentially Private Approximate Quantiles](https://arxiv.org/abs/2110.05429)||
+|[A Joint Exponential Mechanism For Differentially Private Top-k](https://arxiv.org/abs/2201.12333)||
+|[Transfer Learning In Differential Privacy's Hybrid-Model](https://proceedings.mlr.press/v162/kohen22a/kohen22a.pdf)||
+|[Bounding Training Data Reconstruction in Private (Deep) Learning](https://arxiv.org/pdf/2201.12383)||
+|[FriendlyCore: Practical Differentially Private Aggregation](https://proceedings.mlr.press/v162/tsfadia22a/tsfadia22a.pdf)||
+|[Public Data-Assisted Mirror Descent for Private Model Training](https://proceedings.mlr.press/v162/amid22a/amid22a.pdf)||
+|[Robin Hood and Matthew Effects: Differential Privacy Has Disparate Impact on Synthetic Data](https://arxiv.org/abs/2109.11429)||
+|[Selective Network Linearization for Efficient Private Inference](https://arxiv.org/pdf/2202.02340)||
+|[Shuffle Private Linear Contextual Bandits](https://openreview.net/pdf?id=P0AeY-efPEx)||
+|[Optimal Algorithms for Mean Estimation under Local Differential Privacy](http://arxiv.org/abs/2205.02466)||
+|[Task-aware Privacy Preservation for Multi-dimensional Data](https://icml.cc/media/icml-2022/Slides/16590_uyf9q9u.pdf)||
+|[Differentially Private Coordinate Descent for Composite Empirical Risk Minimization](http://arxiv.org/abs/2110.11688)||
+|[Private Streaming SCO in l_p geometry with Applications in High Dimensional Online Decision Making](https://arxiv.org/pdf/2206.08111)||
+|[Private optimization in the interpolation regime: faster rates and hardness results](https://icml.cc/media/icml-2022/Slides/17982_7yhQyrM.pdf)||
+|[Private Adaptive Optimization with Side information](https://arxiv.org/abs/2202.05963)||
+|[The Fundamental Price of Secure Aggregation in Differentially Private Federated Learning](https://arxiv.org/abs/2203.03761)||
+|[Faster Privacy Accounting via Evolving Discretization](https://proceedings.mlr.press/v162/ghazi22a/ghazi22a.pdf)|Improved [numerical accountant](https://arxiv.org/abs/2106.02848)|
+|[The Poisson Binomial Mechanism for Unbiased Federated Learning with Secure Aggregation](https://arxiv.org/abs/2207.09916)||
+|[Private frequency estimation via projective geometry](https://arxiv.org/abs/2203.00194)||
+|[Deduplicating Training Data Mitigates Privacy Risks in Language Models](https://arxiv.org/abs/2202.06539)||
+|[Hermite Polynomial Features for Private Data Generation](https://arxiv.org/pdf/2106.05042)||
+|[Understanding Clipping for Federated Learning: Convergence and Client-Level Differential Privacy](https://arxiv.org/abs/2106.13673)||
+|[Differentially Private Community Detection for Stochastic Block Models](https://icml.cc/media/icml-2022/Slides/16779.pdf)||
+|[Improved Regret for Differentially Private Exploration in Linear MDP](https://arxiv.org/abs/2202.01292)||
+|[Differentially Private Maximal Information Coefficients](https://arxiv.org/pdf/2206.10685)||
+|[Privacy for Free: How does Dataset Condensation Help Privacy?](https://arxiv.org/abs/2206.00240?context=cs.LG)|see [this thread](https://twitter.com/vitalyFM/status/1549599469695512576?cxt=HHwWgMCt9b2gpIErAAAA)|
+|[Improved Rates for Differentially Private Stochastic Convex Optimization with Heavy-Tailed Data](https://arxiv.org/abs/2106.01336)||
+|[Tight and Robust Private Mean Estimation with Few Users](https://arxiv.org/abs/2110.11876)||
+|[Personalization Improves Privacy-Accuracy Tradeoffs in Federated Learning](https://aisecure-workshop.github.io/aml-iclr2021/papers/21.pdf)||
