--- a/_posts/2022-07-26-blog-post-9.md
+++ b/_posts/2022-07-26-blog-post-9.md
@@ -32,7 +32,7 @@ I have curated and am beginning to read ICML '22 papers related to privacy and f
 |[The Poisson Binomial Mechanism for Unbiased Federated Learning with Secure Aggregation](https://arxiv.org/abs/2207.09916)||
 |[Private frequency estimation via projective geometry](https://arxiv.org/abs/2203.00194)||
 |[Deduplicating Training Data Mitigates Privacy Risks in Language Models](https://arxiv.org/abs/2202.06539)||
-|[Hermite Polynomial Features for Private Data Generation](https://arxiv.org/pdf/2106.05042)||
+|[Hermite Polynomial Features for Private Data Generation](https://arxiv.org/pdf/2106.05042)|use hermite poly feature instead of random fourier feature for mmd-like generative modeling|
 |[Understanding Clipping for Federated Learning: Convergence and Client-Level Differential Privacy](https://arxiv.org/abs/2106.13673)||
 |[Differentially Private Community Detection for Stochastic Block Models](https://icml.cc/media/icml-2022/Slides/16779.pdf)||
 |[Improved Regret for Differentially Private Exploration in Linear MDP](https://arxiv.org/abs/2202.01292)||
