--- a/_posts/2023-04-07-blog-post-10.md
+++ b/_posts/2023-04-07-blog-post-10.md
@@ -62,4 +62,4 @@ I have curated and am beginning to read ICLR '23 papers related to privacy and f
 |[A Closer Look at the Calibration of Differentially Private Learners](https://openreview.net/forum?id=fGm87trHel_)||
 |[On the Universality of Langevin Diffusion for Private Euclidean (Convex) Optimization](https://openreview.net/forum?id=ZrJPdY5k6sg)||
 |[Disparate Impact in Differential Privacy from Gradient Misalignment](https://openreview.net/forum?id=qLOaeRvteqbx)||
-|[Individual Privacy Accounting for Differentially Private Stochastic Gradient Descen](https://openreview.net/forum?id=D4JQEKlTyG)||
+|[Individual Privacy Accounting for Differentially Private Stochastic Gradient Descent](https://openreview.net/forum?id=D4JQEKlTyG)||
